Fix some glitches in mobile template: - Cancel button not being shown for loading popup dialog - Entry id not being aligned

--- a/pixelegg/css/mobile.less
+++ b/pixelegg/css/mobile.less
@@ -93,7 +93,7 @@
 			width: 50px;
 			height: 50px;
 			float:left;
-			background-image: url('../../api/templates/default/images/cancelled.png');/*url(../../api/templates/default/images/topmenu_items/mobile/menu_active.png);*/
+			background-image: url('../../api/templates/default/images/cancelled.svg');
 			-webkit-filter: contrast(2);
 			background-repeat: no-repeat;
 			z-index: 1000;
@@ -127,7 +127,7 @@
 					display:inline-block;
 					margin-left:60px;
 					a#topmenu_logout{
-						background-image: url(../../api/templates/default/images/logout.png);
+						background-image: url(../../api/templates/default/images/logout.svg);
 						background-repeat: no-repeat;
 						width: 50px;
 						height: 50px;
@@ -183,7 +183,7 @@
 
 			//FW Menu
 			div#egw_fw_menu{
-				background-image: url(../../api/templates/default/images/topmenu_items/mobile/menu_active.png);
+				background-image: url(../../api/templates/default/images/topmenu_items/mobile/menu_active.svg);
 				cursor: pointer;
 				position: fixed;
 				width: 50px;
