--- a/pixelegg/mobile/fw_mobile.less
+++ b/pixelegg/mobile/fw_mobile.less
@@ -1602,14 +1602,12 @@
 		.entry_id {
 			position: absolute;
 			right: 10px;
-			top: 15px;
+			top: 6px;
+			color: white;
+			.mob-fontsize-l;
+			font-weight: bold;
 			&::before {
 				content: "#";
-				color: white;
-				.mob-fontsize-l;
-				font-weight: bold;
-			}
-			span {
 				color: white;
 				.mob-fontsize-l;
 				font-weight: bold;
